new icons, unused removed

--- a/frontend/core/src/main/webapp/static/less/icons.less
+++ b/frontend/core/src/main/webapp/static/less/icons.less
@@ -13,24 +13,22 @@ TODO: Icons are not working yet with Phytoplankton
 @banner-logo-size: 70px;
 
 // Icon character codes
-@icon-eye: "\e602";
-@icon-pencil: "\e603";
-@icon-x: "\e604";
-@icon-arrow-left: "\e605";
-@icon-arrow-right: "\e606";
-@icon-home: "\e607";
-@icon-i: "\e608";
-@icon-inbox: "\e609";
-@icon-logo-only: "\e60a";
-@icon-logo-with-text: "\e60b";
-@icon-menu: "\e60c";
-@icon-notes: "\e60d";
-@icon-plus: "\e60e";
-@icon-selection-checked: "\e60f";
-@icon-selection-empty: "\e610";
-@icon-tasks: "\e611";
+@icon-tag: "\e602";
+@icon-x: "\e603";
+@icon-trash: "\e604";
+@icon-menu: "\e605";
+@icon-plus: "\e606";
+@icon-calendar: "\e607";
+@icon-star: "\e608";
+@icon-arrow-left: "\e609";
+@icon-arrow-right: "\e60c";
+@icon-arrow-move: "\e60d";
 @icon-triangle-down: "\e600";
 @icon-triangle-right: "\e601";
+@icon-logo-only: "\e60a";
+@icon-logo-with-text: "\e60b";
+@icon-selection-checked: "\e60f";
+@icon-selection-empty: "\e610";
 
 @font-face {
 	font-family: 'icomoon';
