Redefined colors into text colors and background colors.

--- a/frontend/core/src/main/webapp/static/less/animations.less
+++ b/frontend/core/src/main/webapp/static/less/animations.less
@@ -133,7 +133,7 @@ input[type="checkbox"]:checked + label:before {
   -ms-transition: background-color @speed-animate-date-active @timing-animate-date-active;     // [2]
   transition: background-color @speed-animate-date-active @timing-animate-date-active;         // [2]
   .set-font-bold; // [1]
-  background-color: @color-date-active; // [2]
+  background-color: @color-background-highlighted; // [2]
 }
 
 // 1. Crossfade between calendar and date field.
