--- a/frontend/core/src/main/webapp/static/less/foundation.less
+++ b/frontend/core/src/main/webapp/static/less/foundation.less
@@ -21,25 +21,23 @@ Grid constants
 /*
 Text colors
 */
-@color-error: #e22c09;
-@color-logo: #000000;
-@color-menu-button: #000000;
+@color-text: #000000;
+@color-text-error: #e22c09;
 @color-text-active: #0098ea;
-@color-toaster: #c1c1c1;
+@color-text-highlighted: #919191;
+@color-text-highlighted-pressed: darken(@color-text-highlighted, 10%);
+@color-text-downplayed: #919191;
 
 /*
-Link colors
+Background colors
 */
-@color-link-active: #919191;
-@color-link-pressed: darken(@color-link-active, 10%);
-
-/*
-Default colors for input elements
-*/
-@color-default-inactive: #919191;
-@color-default-active: #0f82fe;
-@color-default-pressed: #0171ea;
-@color-default-disabled: lighten(#b0b0b6, 20%); // TODO: don't use lighten
+@color-background-menu: #212121;
+@color-background-toaster: #c1c1c1;
+@color-background-highlighted: #c1c1c1;
+@color-background-btn-inactive: #919191;
+@color-background-btn-active: #0f82fe;
+@color-background-btn-pressed: #0171ea;
+@color-background-btn-disabled: lighten(#b0b0b6, 20%); // TODO: don't use lighten
 
 
 /*
