--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -193,7 +193,7 @@ Vertically center .container-master and .container-editor in large screens
   max-width: @width-column-max; // [2]
   height: @grid-vertical; // [3]
   line-height: @grid-vertical; // [3]
-  background-color: @color-toaster; // [3]
+  background-color: @color-background-toaster; // [3]
 }
 
 /*
