--- a/frontend/core/src/main/webapp/static/less/links.less
+++ b/frontend/core/src/main/webapp/static/less/links.less
@@ -15,12 +15,12 @@ Following navigation links are used. These shouldn't be used for actions!
 
 a {
   text-decoration: none;
-  color: @color-link-active;
+  color: @color-text-highlighted;
   outline: 0;
 }
 
 a:active {
-  color: @color-link-pressed;
+  color: @color-text-highlighted-pressed;
 }
 
 /*
