--- a/frontend/core/src/main/webapp/static/less/notifications.less
+++ b/frontend/core/src/main/webapp/static/less/notifications.less
@@ -46,6 +46,6 @@ TODO: Modals will be gone soon?
 #modalFooter {
   button[disabled].normal-button {
     color: white;
-    background-color: @color-default-pressed;
+    background-color: @color-background-btn-disabled;
   }
 }
