Clear cached variables on reset

--- a/frontend/core/src/main/webapp/static/less/inputs.less
+++ b/frontend/core/src/main/webapp/static/less/inputs.less
@@ -55,6 +55,10 @@ textarea {
   text-align: center;
 }
 
+/*
+Use class `.btn` to remove all default button styling. Typically these
+are `button` elements that have a logo as `label`.
+*/
 .btn {
   background-color: transparent;
 }
