--- a/frontend/core/src/main/webapp/static/less/links.less
+++ b/frontend/core/src/main/webapp/static/less/links.less
@@ -17,6 +17,7 @@ a {
   text-decoration: none;
   color: @color-text-highlighted;
   outline: 0;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 a:active {
