Adjusted navigation layout

--- a/frontend/core/src/main/webapp/static/less/foundation.less
+++ b/frontend/core/src/main/webapp/static/less/foundation.less
@@ -22,9 +22,10 @@ Grid constants
 Text colors
 */
 @color-text: #000000;
+@color-text-pressed: lighten(@color-text, 20%); // TODO: don't use lighten;
 @color-text-error: #e22c09;
 @color-text-active: #0098ea;
-@color-text-highlighted: #919191;
+@color-text-highlighted: #0f82fe;
 @color-text-highlighted-pressed: darken(@color-text-highlighted, 10%);
 @color-text-downplayed: #919191;
 
