--- a/frontend/core/src/main/webapp/static/less/icons.less
+++ b/frontend/core/src/main/webapp/static/less/icons.less
@@ -9,8 +9,11 @@ extended mind uses <a href="http://icomoon.io">Icomoon</a> to pack icons to font
 TODO: Icons are not working yet with Phytoplankton
 */
 
-@icon-size: 28px;
-@banner-logo-size: 70px;
+@size-icon-logo: 22px;
+@size-icon-menu: 17px;
+@size-icon-toggle-completed: 20px;
+@size-icon-arrow-small: 11px;
+@size-icon-arrow-large: 20px;
 
 // Icon character codes
 @icon-tag: "\e602";
