--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -121,3 +121,11 @@ Use `.text-details` to separate details from body text.
     content: @icon-plus;
   }
 }
+
+.text-trash {
+ &:after {
+    .set-icon-font;
+    color: @color-text;
+    content: @icon-trash;
+  }
+}
