Closer to correct heading size

--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -20,7 +20,7 @@ Fonts in use:
 @font-family-bold: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'HelveticaNeueLT-Roman', 'Helvetica Neue', 'Arial', 'Helvetica', 'sans-serif';
 
 @size-font-jumbotron: 70px;
-@size-font-large: 40px;
+@size-font-large: 49px;
 @size-font-ingress: 25px;
 @size-font-content: 18px;
 @size-font-small: 11px;
@@ -54,6 +54,15 @@ Font mixins.
 .set-font-large() {
   font-size: @size-font-large;
   .set-font-bold;
+}
+
+/*
+******************************************************************
+# Headings.
+*/
+
+h2 {
+  font-size: @size-font-large;
 }
 
 /*
