--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -382,7 +382,7 @@ NOTE: Implementation depends on the removing of --left|--right DOM nodes if they
 
 .group-mixed--left, .group-mixed--middle, .group-mixed--right {
   display: table-cell;
-  vertical-align: middle;
+  vertical-align: top;
 }
 
 // 1. Force all child elements not to increase .group-mixed height
@@ -407,7 +407,7 @@ NOTE: Implementation depends on the removing of --left|--right DOM nodes if they
 
 .group-mixed--middle {
   width: 100%;
-  line-height: @grid-vertical-half;
+  line-height: @grid-vertical;
 }
 
 // 1. Increase clicking area
