Remove top and bottom margin from HTML heading element from h1 to h4.

--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -61,6 +61,13 @@ Font mixins.
 # Headings.
 */
 
+// 1. Most browsers will set default margin-top and -bottom to heading elements.
+//    We are using headings up to h4.
+h1, h2, h3, h4 {
+  margin-top: 0;    // [1]
+  margin-bottom: 0; // [1]
+}
+
 h2 {
   font-size: @size-font-large;
 }
