show completed icon hex code

--- a/frontend/core/src/main/webapp/static/less/icons.less
+++ b/frontend/core/src/main/webapp/static/less/icons.less
@@ -16,6 +16,7 @@ TODO: Icons are not working yet with Phytoplankton
 @size-icon-arrow-large: 20px;
 
 // Icon character codes
+@icon-show-completed: "\e60e";
 @icon-tag: "\e602";
 @icon-x: "\e603";
 @icon-trash: "\e604";
