--- a/frontend/core/src/main/webapp/static/less/foundation.less
+++ b/frontend/core/src/main/webapp/static/less/foundation.less
@@ -28,6 +28,8 @@ Text colors
 @color-text-highlighted: #0f82fe;
 @color-text-highlighted-pressed: darken(@color-text-highlighted, 10%);
 @color-text-downplayed: #919191;
+@color-text-downplayed-pressed: darken(@color-text-downplayed, 10%);
+@color-text-inverse: #FFFFFF;
 
 /*
 Background colors
