--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -7,7 +7,8 @@
 TODO: em grid structure explained in plain English (when new grid structure decided!)
 */
 
-@height-container-toolbar: @grid-vertical;
+@height-heading: @grid-vertical * 1.5;
+@height-container-toolbar: @height-heading;
 @height-landscape-max: 769px;
 @height-max: 1025px;
 @width-max: 1025px;
@@ -238,9 +239,13 @@ Vertically center .container-master and .container-editor in large screens
   overflow-y: auto;
 }
 
-// menu     title    omnibar
+/*
+`.container-tooblar` specifies height for toolbar.
+*/
+
+// 1. Override @grid-vertical height.
 .container-toolbar {
-  height: @height-container-toolbar;
+  height: @height-container-toolbar;  // [1]
 }
 
 /*
@@ -457,9 +462,10 @@ NOTE: Implementation depends on the removing of --left|--right DOM nodes if they
 // 2. Center vertically. We are using .group-mixed--middle and .group-mixed--right in .group-mixed heading
 //    or just .group-heading.
 .group-heading,
-.group-mixed.heading > .group-mixed--middle, .group-mixed--right {
-  line-height: @grid-vertical * 2;  // [1]
-  vertical-align: middle;           // [2]
+.group-mixed.heading > .group-mixed--middle,
+.group-mixed.heading > .group-mixed--right {
+  line-height: @height-heading; // [1]
+  vertical-align: middle;       // [2]
 }
 
 /*
@@ -505,6 +511,21 @@ Not compatible with `.row` so we need to apply padding-left and -right inside.
   float: right;
   padding-right: @grid-horizontal;
   height: @grid-vertical;
+}
+
+// 1. Set height.
+.group-symmetrical.heading {
+  height: @height-heading;  // [1]
+}
+
+// 1. Set override height.
+// 2. Align components vertically.
+.group-symmetrical.heading > .group-symmetrical--left,
+.group-symmetrical.heading > .group-symmetrical--middle,
+.group-symmetrical.heading > .group-symmetrical--right {
+  height: @height-heading;      // [1]
+  line-height: @height-heading; // [1]
+  vertical-align: middle;       // [2]
 }
 
 /*
