--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -16,7 +16,7 @@ Extended Mind specific UI-components, e.g. welcome/landing page, timeline, sidem
 
 // 1. Set white background to hide stuff below.
 .editor-footer {
-  background-color: white;
+  background-color: white; // TODO: muuttujaksi, siirrä layout.lessiin
 }
 
 /*
