show completed icon

--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -170,9 +170,8 @@ Icon texts
   line-height: @size-icon-toggle-completed;
   &:after {
     .set-icon-font;
-    // FIXME: Change when actual logo is in the font pack!
-    color: @color-text;
-    content: @icon-menu;
+    color: @color-text-downplayed;
+    content: @icon-show-completed;
   }
 }
 
