unchecked checkbox color defaults to @color-text-downplayed-light (new sami layout)

--- a/frontend/core/src/main/webapp/static/less/foundation.less
+++ b/frontend/core/src/main/webapp/static/less/foundation.less
@@ -29,6 +29,7 @@ Text colors
 @color-text-highlighted-pressed: darken(@color-text-highlighted, 10%);
 @color-text-downplayed: #919191;
 @color-text-downplayed-pressed: darken(@color-text-downplayed, 10%);
+@color-text-downplayed-light: #d3d3d3;
 @color-text-inverse: #FFFFFF;
 
 /*
