--- a/frontend/core/src/main/webapp/static/less/inputs.less
+++ b/frontend/core/src/main/webapp/static/less/inputs.less
@@ -115,7 +115,7 @@ input[type="checkbox"] {
 input[type="checkbox"] + label:before {
   .set-icon-font;
   font-size: @size-checkbox;
-  color: @color-text-downplayed;
+  color: @color-text-downplayed-light;
   content: @icon-selection-empty;
 }
 
