--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -69,6 +69,10 @@ h1, h2, h3, h4 {
   margin-bottom: 0; // [1]
 }
 
+h1 {
+  font-size: @size-font-topheading;
+}
+
 h2 {
   font-size: @size-font-large;
 }
