plus icon size tweak

--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -184,6 +184,7 @@ Icon texts
     .set-icon-font;
     color: @color-text-highlighted;
     content: @icon-plus;
+    font-size: @size-icon-plus;
   }
 }
 
