Active day, month and year indicators in datepicker.

--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -8,6 +8,13 @@
 Extended Mind specific UI-components, e.g. welcome/landing page, timeline, sidemenu and omnibar.
 */
 
+/*
+*************************************************************
+# Datepicker
+*/
+.datepicker-active-day {
+  background-color: red;
+}
 
 /*
 *************************************************************
