Renamed .large to .height-large.

--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -518,7 +518,7 @@ Not compatible with `.row` so we need to apply padding-left and -right inside.
 }
 
 // 1. Set height for large .group-symmetrical. Overrides default height.
-.group-symmetrical.large {
+.group-symmetrical.height-large {
   height: @grid-vertical * 1.5;  // [1]
   line-height: @grid-vertical * 1.5; // [1]
 }
