--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -523,6 +523,10 @@ Not compatible with `.row` so we need to apply padding-left and -right inside.
   line-height: @grid-vertical * 1.5; // [1]
 }
 
+.group-symmetrical--middle.width-large {
+  max-width: @max-width-group-symmetrical-middle * 2;
+}
+
 /*
 **************************************************************************
 # Swiper
