--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -1,4 +1,5 @@
 @import "foundation.less";
+@import "typography.less";
 @import "inputs.less";
 @import "layout.less";
 
@@ -13,7 +14,7 @@ Extended Mind specific UI-components, e.g. welcome/landing page, timeline, sidem
 # Datepicker
 */
 .datepicker-active-day {
-  background-color: red;
+  .set-font-bold();
 }
 
 /*
