Datepicker:  * Replaced toggle datepicker with open|close datepicker to make it work with click elsewhere.  * Show weekdays in datepicker.  * Use ng-if to show custom toolbar instead of ng-show
Other:
 * Added getShorWeekdayNames function.
 * .text-details if downplayed by default

--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -23,6 +23,7 @@ Fonts in use:
 @size-font-large: 49px;
 @size-font-ingress: 25px;
 @size-font-content: 18px;
+@size-font-medium: 15px;
 @size-font-topheading: 13px;
 @size-font-small: 11px;
 
@@ -91,6 +92,7 @@ Use `.text-details` to separate details from body text.
 
 .text-details {
   font-size: @size-font-small;
+  color: @color-text-downplayed;
 }
 
 .text-error {
