Fixed synchronization, added loading animation

--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -11,6 +11,24 @@ Extended Mind specific UI-components, e.g. welcome/landing page, timeline, sidem
 
 /*
 *************************************************************
+# Loading animation
+*/
+
+.loading-animation {
+  color: @color-text-downplayed;
+  font-size: @size-font-small;
+}
+
+.container-master .loading-animation {
+  padding-top: @grid-vertical * 2;
+}
+
+.container-editor .loading-animation {
+  padding-top: @grid-vertical;
+}
+
+/*
+*************************************************************
 # Datepicker
 */
 
