Improved editor swiper performance * minimized browser painting on other content than editor - set pointer-events: none and of overflow: hidden * allow only external swipes in feature swipers * set drawer element's display property to initial instead of block when they are hidden and then shown

--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -28,6 +28,17 @@ TODO: em grid structure explained in plain English (when new grid structure deci
   position: relative; // [2]
 }
 
+// 1. Minimize paint when editor is open and .container-master and .container-menu are stacked beneath.
+//    At least absolutely positioned elements inside these classes would repaint and slow down swiping in
+//    editor swiper.
+.editor-visible .container-master,
+.editor-visible .container-master *,
+.editor-visible .container-menu,
+.editor-visible .container-menu * {
+  pointer-events: none; // [1]
+  overflow: hidden;     // [1]
+}
+
 /*
 **************************************************************************
 # LEVEL 2: Optional Intermediate Containers (main, drawer-aisle)
